@@ -1,3 +1,4 @@
+* Force UTC as timezone (migration script available on tryton-tools)
 * Add relation_field for many2one
 
 Version 3.0.0 - 2013-10-21
